# MALRT

./: .env.example  .gitignore  pyproject.toml
.hermes/plans/: 2026-06-18_140000-scaffold-v1.md
src/malrt/: __init__.py  cli.py  config.py
src/malrt/api/: app.py  routes.py
src/malrt/api/static/: app.js  index.html  style.css
src/malrt/core/: database.py  engine.py  models.py
src/malrt/reporters/: base.py  virustotal.py
tests/: test_api.py  test_engine.py
